# motus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  LICENSE  README.md  install.sh  mkdocs.yaml  pyproject.toml
.cursor-plugin/: plugin.json
.github/workflows/: docs.yml
docs/: docs.json  index.md  introduction.mdx  plan.md
docs/about/: changelog.md  license.md
docs/api/: index.md
docs/cloud/: sandbox.mdx
docs/concepts/: models.mdx  tools.mdx  workflow.mdx
docs/contributing/: code-style.md  development-setup.md  pull-requests.md  testing.md
docs/examples/: index.md
docs/getting-started/: configuration.md  installation.md  installation.mdx  quickstart.md
docs/guides/: deployment.mdx  guardrails.mdx  plugin.mdx  serving.mdx  tracing.mdx
docs/integrations/: claude-agent.md  openai-agents.md  openai-agents.mdx
docs/mkdocs/css/: extra.css
docs/mkdocs/hooks/: generate_examples.py  remove_announcement.py  url_schemes.py
docs/mkdocs/js/: extra.js
docs/user-guide/: agents.md  cli.md  deployment.md  guardrails.md  mcp-integration.md  memory.md  models.md  runtime.md  serving.md  skills.md  tools.md  tracing.md
examples/: README.md  agent.py  mcp_tools.py  memory.py
examples/deep_research/: pyproject.toml
examples/deep_research/deep_research/: __init__.py
examples/deep_research/deep_research/motus_native/: serve.py
examples/motus_agent/: compaction_memory_demo.py  skill_demo.py
examples/skills/: agent.py
requirements/: docs.txt
src/motus/: update_check.py
src/motus/auth/: cli.py  (+2 more)
tests/unit/: test_update_check.py
(+47 files in other folders)
